--- a/_config.yml
+++ b/_config.yml
@@ -39,18 +39,15 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  email: "rasoolghafari92@gmail.com"
+  github: rasoolghafari
+  twitter: a.rasoolghafari
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: rasoolghafari
 #  xing: yourname
-#  stackoverflow: "3943160/daattali"
+  stackoverflow: "1449185/rasool-ghafari"
 #  snapchat: deanat78
-#  instagram: deanat78
+  instagram: rasoolghaffari
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
@@ -71,7 +68,7 @@ rss-description: This website is a virtual proof that I'm awesome
 # Select which social network share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+  #facebook: true
   linkedin: true
   vk: false
 
@@ -186,7 +183,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "Iran/Tehran"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
